--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,6 @@ body {
     background-image: url('../img/fondo1.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-
-
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -139,32 +137,29 @@ button {
     /* background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0)); */
     cursor: pointer;
 
-    box-shadow: inset 0 0 23px 5px rgba(49, 49, 49, 0.295);
+    box-shadow: inset 0 0 23px 5px rgba(88, 88, 88, 0.295);
 
 }
 
 button:hover {
-
     transform: scale(1);
     box-shadow: 0 0 32px -3px #c2d9ff8f;
     transition: all 0.04s ease-in-out;
-
-
-
 }
 
 button:active {
-
     transform: scale(0.95);
     box-shadow: 0 0 32px -3px #5c99fa8f;
 
-
-
 }
+
 #delete{
     background-color: #da3939b9;
 }
 
+#delete:hover{
+    box-shadow: 0 0 32px -3px #ff5e5eb9;
+}
 
 
 .igual{
@@ -172,8 +167,10 @@ button:active {
     grid-row: span 2;
     height: 100%;
     width: 100%;
+}
 
-
+.igual:hover {
+    box-shadow: 0 0 32px -3px rgba(255, 94, 0, 0.726);  
 }
 
 .suma{
@@ -181,7 +178,11 @@ button:active {
 }
 
 .operadore_btn{
-    background-color: rgba(0, 140, 255, 0.342);}
+    background-color: rgba(0, 140, 255, 0.5);
+}
+.operadore_btn:hover{
+    box-shadow: 0 0 32px -3px rgba(0, 140, 255, 0.5);
+}
 
 
 .numeros {
@@ -193,4 +194,124 @@ button:active {
 
 .cero {
     grid-column: span 2;
+}
+
+/* Theme Switch Styles */
+.theme-switch-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-bottom: 10px;
+}
+
+#theme-text {
+    margin-right: 10px;
+    font-family: 'Roboto', sans-serif;
+    color: rgba(202, 202, 202, 0.801);
+    font-size: 14px;
+}
+
+.theme-switch {
+    display: inline-block;
+    height: 24px;
+    position: relative;
+    width: 50px;
+}
+
+.theme-switch input {
+    display:none;
+}
+
+.slider {
+    background-color: #4d4d4d;
+    bottom: 0;
+    cursor: pointer;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    transition: .4s;
+}
+
+.slider:before {
+    background-color: rgb(34, 34, 34);
+    bottom: 4px;
+    content: "";
+    height: 16px;
+    left: 4px;
+    position: absolute;
+    transition: .4s;
+    width: 16px;
+}
+
+input:checked + .slider {
+    background-color: rgba(0, 140, 255, 0.5);
+}
+
+input:checked + .slider:before {
+    transform: translateX(26px);
+    background-color: #e0e0e0;
+}
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
+/* Light Mode Styles */
+.light-mode {
+    background-image: url('../img/fondo2.jpg');
+}
+
+.light-mode .calculadora {
+    background-color: rgba(199, 199, 199, 0.15);
+}
+
+.light-mode .screen h1 {
+    color: rgba(51, 51, 51, 0.9);
+}
+
+.light-mode .screen h4 {
+    color: rgba(100, 100, 100, 0.8);
+}
+
+.light-mode button {
+    color: rgb(80, 80, 80);
+    background: rgba(255, 255, 255, 1);
+    box-shadow: inset 0 0 23px 5px rgba(101, 101, 101, 0.295);
+}
+
+.light-mode button:hover {
+    box-shadow: 0 0 32px -3px #0000008f;
+}
+
+.light-mode #delete {
+    background-color: #ff5e5eb9;
+}
+
+.light-mode #delete:hover {
+    box-shadow: 0 0 32px -3px #ff5e5eb9;
+}
+
+.light-mode .operadore_btn {
+    background-color: rgba(0, 140, 255, 0.5);
+}
+
+.light-mode .operadore_btn:hover{
+    box-shadow: 0 0 32px -3px rgba(0, 140, 255, 0.5);
+}
+
+.light-mode .igual {
+    background-color: rgba(255, 123, 0, 0.8);
+}
+
+.light-mode .igual:hover {
+    box-shadow: 0 0 32px -3px rgba(255, 123, 0, 0.8);
+}
+
+.light-mode #theme-text {
+    color: rgba(51, 51, 51, 0.9);
 }
